--- a/writehat/templates/pages/findings.html
+++ b/writehat/templates/pages/findings.html
@@ -10,6 +10,7 @@
 
 {% block headerRight %}
   {% include 'snippets/textButton.html' with id='categoryAdd' name='New Category' type='plus' class='btn-light border border-dark categoryAddButton' %}
+  {% include 'snippets/textButton.html' with href='/findings/asvs/new' name='New ASVS Finding' type='plus' class='bg-asvs' %}
   {% include 'snippets/textButton.html' with href='/findings/proactive/new' name='New Proactive Finding' type='plus' class='bg-proactive' %}
   {% include 'snippets/textButton.html' with href='/findings/cvss/new' name='New CVSS Finding' type='plus' class='bg-cvss' %}
   {% include 'snippets/textButton.html' with href='/findings/dread/new' name='New DREAD Finding' type='plus' class='bg-dread' %}
